feat(nano): Add Nano SDK v1

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,12 @@ on: # yamllint disable-line rule:truthy
     branches:
       - master
       - dev
+      - nano-master
     tags:
       - v*
   pull_request:
+    branches:
+      - nano-master
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
