--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,4 @@ services:
       - ./tests:/app/hathor/tests
 
    # command: ["poetry", "run", "pytest","-rP", "hathor/tests/nanocontracts/blueprints/test_rewards.py"] # with stdout
-    command: ["poetry", "run", "pytest","-rP", "tests/nanocontracts/blueprints/test_dozer_pool.py"] # without stdout
+    command: ["poetry", "run", "pytest", "tests/nanocontracts/test_call_other_contract.py"] # without stdout
