--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
       context: ./
       dockerfile: Dockerfile.node
     volumes:
-      - ./hathor/nanocontracts/blueprints:/app/hathor/hathor/nanocontracts/blueprints
-      - ./hathor/conf/nano_testnet.yml:/app/hathor/hathor/conf/nano_testnet.yml
-      - ./tests:/app/hathor/tests
+      - ./hathor/nanocontracts/blueprints:/app/hathor/nanocontracts/blueprints
+      - ./hathor/conf/nano_testnet.yml:/app/hathor/conf/nano_testnet.yml
+      - ./tests:/app/tests
 
    # command: ["poetry", "run", "pytest","-rP", "hathor/tests/nanocontracts/blueprints/test_rewards.py"] # with stdout
-    command: ["poetry", "run", "pytest", "tests/nanocontracts/test_call_other_contract.py"] # without stdout
+    command: ["poetry", "run", "pytest","-rP", "tests/nanocontracts/blueprints/test_oasis.py"] # without stdout
