remove try/except block and create command for text ocb on docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,14 +14,24 @@ services:
       - HATHOR_TEST_DISABLE_GIT=1
 
     # command: ["poetry", "run", "pytest","-rP", "hathor/tests/nanocontracts/blueprints/test_rewards.py"] # with stdout
-    command: [
+    # command: [
+    #     "poetry",
+    #     "run",
+    #     "pytest",
+    #     "--capture=no",
+    #     "--disable-warnings",
+    #     "--tb=short",           # shorter but readable tracebacks on failure
+    #     "--color=yes",          # colorized output
+    #     "-q",                   # quiet mode - only show failures and summary
+    #     "tests/nanocontracts/blueprints/test_dozer_temp.py",
+    #   ]
+
+    command:
+      [
         "poetry",
         "run",
-        "pytest",
-        "--capture=no",
-        "--disable-warnings",
-        "--tb=short",           # shorter but readable tracebacks on failure
-        "--color=yes",          # colorized output
-        "-q",                   # quiet mode - only show failures and summary
-        "tests/nanocontracts/blueprints/test_dozer_temp.py",
+        "hathor-cli",
+        "check-blueprint",
+        "--file",
+        "hathor/nanocontracts/blueprints/dozer_pool_manager.py",
       ]
