--- a/hathor/conf/nano_testnet.yml
+++ b/hathor/conf/nano_testnet.yml
@@ -1,6 +1,6 @@
 P2PKH_VERSION_BYTE: x49
 MULTISIG_VERSION_BYTE: x87
-NETWORK_NAME: nano-testnet-alpha
+NETWORK_NAME: nano-testnet-bravo
 BOOTSTRAP_DNS:
   []
   # - alpha.nano-testnet.hathor.network
