--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,4 +16,5 @@ services:
     # command: ["poetry", "run", "pytest","-rP", "hathor/tests/nanocontracts/blueprints/test_rewards.py"] # with stdout
     command: >
       bash -c
-        "poetry run pytest --capture=no --disable-warnings --tb=short --color=yes -q tests/nanocontracts/blueprints/test_dozer_tools.py && poetry run hathor-cli check-blueprint --file hathor/nanocontracts/blueprints/dozer_tools.py"
+        "poetry run pytest --capture=no --disable-warnings --tb=short --color=yes -q tests/nanocontracts/blueprints/test_dozer_tools.py\
+         "
