--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,10 @@ services:
     volumes:
       - ./hathor/nanocontracts/blueprints:/app/hathor/nanocontracts/blueprints
       - ./hathor/conf/nano_testnet.yml:/app/hathor/conf/nano_testnet.yml
-      - ./tests:/app/tests
+      - ./hathor_tests:/app/hathor_tests
       # - ./.git:/app/.git
 
     # command: ["poetry", "run", "pytest","-rP", "hathor/tests/nanocontracts/blueprints/test_crowdsale.py"] # with stdout
     command: >
       bash -c
-        "poetry run pytest --capture=no -s --disable-warnings --tb=short --color=yes tests/nanocontracts/blueprints/test_dozer_pool_manager.py && poetry run hathor-cli check-blueprint --file hathor/nanocontracts/blueprints/dozer_pool_manager.py"
+        "poetry run pytest --capture=no -s --disable-warnings --tb=short --color=yes hathor_tests/nanocontracts/blueprints/test_dozer_pool_manager.py  hathor_tests/nanocontracts/blueprints/tests2.py hathor_tests/nanocontracts/blueprints/tests3.py && poetry run hathor-cli check-blueprint --file hathor/nanocontracts/blueprints/dozer_pool_manager.py"
